--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Books",
+            "request": "launch",
+            "mainClass": "Books",
+            "projectName": "ca4006-assignment1_a29b314f"
+        },
+        {
+            "type": "java",
+            "name": "Delivery",
+            "request": "launch",
+            "mainClass": "Delivery",
+            "projectName": "ca4006-assignment1_a29b314f"
+        },
+        {
+            "type": "java",
             "name": "Main",
             "request": "launch",
             "mainClass": "Main",
