--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "ca4006-Assignment1_33223e9a"
+        },
+        {
+            "type": "java",
             "name": "Books",
             "request": "launch",
             "mainClass": "Books",
